<resources>
    <string name="app_name">MusicCut</string>
    <string name="string_search_local_music">搜索本地歌曲</string>
    <string name="string_music">乐库</string>
    <string name="string_setting">设置</string>

    <string name="string_local">本地</string>
    <string name="string_cut">剪切</string>
    <string name="string_synthetic">合成</string>
    <string name="string_translate">转换</string>
    <string name="string_other">其他</string>
    <string name="string_mixing">混音</string>

    <string name="string_music_long">长度 : %1$s</string>
    <string name="string_music_type">类型 : %1$s</string>
    <string name="string_music_size">大小 : %1$s</string>
    <string name="string_data_empty">当前暂无已处理好的音乐</string>
    <string name="string_play_start_time">00:00</string>
    <string name="string_praise">给我们好评</string>
    <string name="string_music_operation">音频处理</string>
    <string name="string_qq1">官方①群</string>
    <string name="string_qq2">官方②群</string>
    <string name="string_share">分享APP</string>
    <string name="string_wechat">公众号</string>
    <string name="string_change_theme">切换主题</string>
    <string name="string_feedback">反馈</string>
    <string name="string_common_question">常见问题</string>
    <string name="string_tips">
        温馨提示:如果列表中没有您要找的音乐,您可以输入音乐关键字后点击\"扫描\"按钮从手机内存中扫描音乐;
        如果您知道音乐在内存中的位置,您可以点击\"路径\"按钮,从文件浏览器中选取音乐。</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="no_permissions">运行应用需要音频权限.\n\n当提示时请授予这些权限.</string>
    <string name="string_click_choose_music">点击选择音乐</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>


</resources>
