<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/mIvPraise"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_praise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mTvPraise"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_praise"
        app:layout_constraintLeft_toRightOf="@id/mIvPraise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mLinePraise"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvPraise" />

    <ImageView
        android:id="@+id/mIvQues"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLinePraise" />

    <TextView
        android:id="@+id/mTvQues"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_common_question"
        app:layout_constraintLeft_toRightOf="@id/mIvQues"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLinePraise" />

    <View
        android:id="@+id/mLineQues"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mIvQues" />

    <ImageView
        android:id="@+id/mIvFeedBack"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_feedback"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineQues" />

    <TextView
        android:id="@+id/mTvFeedBack"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_feedback"
        app:layout_constraintLeft_toRightOf="@id/mIvPraise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineQues" />

    <ImageView
        android:id="@+id/mIvQQ1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_qq"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvFeedBack" />

    <TextView
        android:id="@+id/mTvQQ1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_qq1"
        app:layout_constraintLeft_toRightOf="@id/mIvQQ1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvFeedBack" />

    <View
        android:id="@+id/mLineQQ1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvQQ1" />

    <ImageView
        android:id="@+id/mIvQQ2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_qq"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineQQ1" />

    <TextView
        android:id="@+id/mTvQQ2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_qq2"
        app:layout_constraintLeft_toRightOf="@id/mIvQQ2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineQQ1" />

    <ImageView
        android:id="@+id/mIvShare"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_share"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvQQ2" />

    <TextView
        android:id="@+id/mTvShare"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_share"
        app:layout_constraintLeft_toRightOf="@id/mIvShare"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvQQ2" />

    <View
        android:id="@+id/mLineShare"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvShare" />

    <ImageView
        android:id="@+id/mIvWeChat"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_wechat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineShare" />

    <TextView
        android:id="@+id/mTvWeChat"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_wechat"
        app:layout_constraintLeft_toRightOf="@id/mIvWeChat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineShare" />

    <View
        android:id="@+id/mLineWeChat"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mIvWeChat" />

    <ImageView
        android:id="@+id/mIvTheme"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@mipmap/icon_theme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineWeChat" />

    <TextView
        android:id="@+id/mTvTheme"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/string_change_theme"
        android:onClick="onClick"
        app:layout_constraintLeft_toRightOf="@id/mIvTheme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLineWeChat" />


</android.support.constraint.ConstraintLayout>