<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="icbc.com.musiccut.activity.MainActivity">

    <TextView
        android:id="@+id/mTvAppName"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@id/mFrameMain"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/mLinearSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/mLinearSearch"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/mFrameMain"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="@id/mTvAppName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/mEtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_bg"
            android:drawableLeft="@mipmap/icon_search"
            android:drawablePadding="5dp"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/string_search_local_music"
            android:paddingLeft="5dp"
            android:textSize="@dimen/search_text_size" />
    </android.support.v7.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/mFrameMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/mFootLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvAppName" />

    <include
        android:id="@+id/mFootLayout"
        layout="@layout/foot_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mFrameMain" />

    <ImageView
        android:id="@+id/mIvAdd"
        android:layout_width="@dimen/fab_add_size"
        android:layout_height="@dimen/fab_add_size"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/icon_plus_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mFootLayout"
        app:layout_constraintStart_toStartOf="@id/mFootLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mConstraintLayoutLayoutMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white_tran"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mLLMusicOperation"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/mRecyclerViewMenu">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/gray_deep" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:text="@string/string_music_operation" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/gray_deep" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mRecyclerViewMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/mIvMenuClose"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:src="@mipmap/icon_close_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
