<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_tran">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mInMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/mLineLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/gray_deep"
            app:layout_constraintBottom_toBottomOf="@id/mTvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mTvTitle"
            app:layout_constraintTop_toTopOf="@id/mTvTitle" />

        <View
            android:id="@+id/mLineRight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/gray_deep"
            app:layout_constraintBottom_toBottomOf="@id/mTvTitle"
            app:layout_constraintLeft_toRightOf="@id/mTvTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mTvTitle" />

        <TextView
            android:id="@+id/mTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:text="@string/string_music_operation"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuCut"
            app:layout_constraintLeft_toRightOf="@id/mLineLeft"
            app:layout_constraintRight_toLeftOf="@id/mLineRight" />
        <!--MenuList START-->
        <!-- ① -->
        <ImageView
            android:id="@+id/mIvMenuCut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_cut"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuCut"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuSynthetic" />

        <TextView
            android:id="@+id/mTvMenuCut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/string_cut"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuChangeVoice"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuCut"
            app:layout_constraintRight_toRightOf="@id/mIvMenuCut" />


        <ImageView
            android:id="@+id/mIvMenuSynthetic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/icon_menu_synthesis"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuSynthetic"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuCut"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuTranslate" />

        <TextView
            android:id="@+id/mTvMenuSynthetic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/string_synthetic"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuChangeVoice"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuSynthetic"
            app:layout_constraintRight_toRightOf="@id/mIvMenuSynthetic" />


        <ImageView
            android:id="@+id/mIvMenuTranslate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/icon_menu_translate"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuTranslate"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuSynthetic"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuMixing" />

        <TextView
            android:id="@+id/mTvMenuTranslate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/string_translate"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuChangeVoice"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuTranslate"
            app:layout_constraintRight_toRightOf="@id/mIvMenuTranslate" />

        <ImageView
            android:id="@+id/mIvMenuMixing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/icon_menu_mixing"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuMixing"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuTranslate"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/mTvMenuMixing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/string_mixing"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuChangeVoice"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuMixing"
            app:layout_constraintRight_toRightOf="@id/mIvMenuMixing" />
        <!-- ② -->
        <ImageView
            android:id="@+id/mIvMenuChangeVoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_change_voice"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuChangeVoice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuFadeInOut" />

        <TextView
            android:id="@+id/mTvMenuChangeVoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="变音交流"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenu4Tran3"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuChangeVoice"
            app:layout_constraintRight_toRightOf="@id/mIvMenuChangeVoice" />


        <ImageView
            android:id="@+id/mIvMenuFadeInOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_fade_inout"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuFadeInOut"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuChangeVoice"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuChangeVolume" />

        <TextView
            android:id="@+id/mTvMenuFadeInOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="淡入淡出"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenu4Tran3"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuFadeInOut"
            app:layout_constraintRight_toRightOf="@id/mIvMenuFadeInOut" />


        <ImageView
            android:id="@+id/mIvMenuChangeVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_volume"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuChangeVolume"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuFadeInOut"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuRecord" />

        <TextView
            android:id="@+id/mTvMenuChangeVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="改变音量"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenu4Tran3"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuChangeVolume"
            app:layout_constraintRight_toRightOf="@id/mIvMenuChangeVolume" />

        <ImageView
            android:id="@+id/mIvMenuRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_record"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuRecord"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuChangeVolume"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/mTvMenuRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="录音"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenu4Tran3"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuRecord"
            app:layout_constraintRight_toRightOf="@id/mIvMenuRecord" />
        <!-- ③ -->
        <ImageView
            android:id="@+id/mIvMenu4Tran3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_4t3"
            app:layout_constraintBottom_toTopOf="@id/mTvMenu4Tran3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuBlankVoice" />

        <TextView
            android:id="@+id/mTvMenu4Tran3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="视频转音频"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenu4Tran3"
            app:layout_constraintRight_toRightOf="@id/mIvMenu4Tran3" />


        <ImageView
            android:id="@+id/mIvMenuBlankVoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_blank_voice"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuBlankVoice"
            app:layout_constraintLeft_toRightOf="@id/mIvMenu4Tran3"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuVocalTract" />

        <TextView
            android:id="@+id/mTvMenuBlankVoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="空白声音"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuBlankVoice"
            app:layout_constraintRight_toRightOf="@id/mIvMenuBlankVoice" />


        <ImageView
            android:id="@+id/mIvMenuVocalTract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@mipmap/icon_menu_vocal_tract"
            app:layout_constraintBottom_toTopOf="@id/mTvMenuVocalTract"
            app:layout_constraintLeft_toRightOf="@id/mIvMenuSynthetic"
            app:layout_constraintRight_toLeftOf="@id/mIvMenuMixing" />

        <TextView
            android:id="@+id/mTvMenuVocalTract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="声道处理"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
            app:layout_constraintLeft_toLeftOf="@id/mIvMenuVocalTract"
            app:layout_constraintRight_toRightOf="@id/mIvMenuVocalTract" />
        <!--MenuList END-->
        <ImageView
            android:id="@+id/mIvMenuClose"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:src="@mipmap/icon_close_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>